tests/NormalTests/paczka1/small_fuzzy/62458927.err
Error in line 10: oNOW A565 91,7
Error in line 12: xvn2ik S553 10>,4
Error in line 8: jXuhsCdZ2Tc S553 3,0
